下書き修正

--- a/draft/2017-05-15-001.md
+++ b/draft/2017-05-15-001.md
@@ -58,9 +58,23 @@ http://[Githubアカウント名].github.io/[プロジェクト名]
 今回の場合は
 http://eiichi-worker.github.io/sample-pages
 
-### 独自ドメインを当てる
+### 3. ドメインの設定をする
+
+DNSの設定とリポジトリに「CNAME」という名前のファイルを置きます。  
+
+1. DNSの設定をします  
+当てたいドメインのCNAMEに「[Github アカウント名].github.io」を設定してください。
+    ```
+    blog.noraneko.work. CNAME eiichi-worker.github.io
+    ```
+1. リポジトリの直下に「CNAME」という名前のファイルを作り設定したいドメイン名を書き込みます。  
+今回の場合は「sample-pages.noraneko.works」
+    ``` CNAME
+    sample-pages.noraneko.works
+    ```
 
 
 関連リンク
 ---
 - [Github Pages 公式](https://pages.github.com/)
+- [Using a custom domain with GitHub Pages](https://help.github.com/articles/using-a-custom-domain-with-github-pages/)
