--- a/source/_posts/2017-02-27-001.md
+++ b/source/_posts/2017-02-27-001.md
@@ -18,160 +18,179 @@ tags: [Mac,セットアップ,環境構築,インストール,メモ]
 - ぬるっとしたアニメーションを消す 
 - （TODO カーソルスピードを上げる）
 - 隠しファイルを表示  https://pc-karuma.net/mac-finder-show-all-files/
-```
-defaults write com.apple.finder AppleShowAllFiles TRUE
-killall Finder
-```
-- コマンドにエイリアスを張る
-  http://qiita.com/pugiemonn/items/da04a422cc7da548632e
-```
-vi ~/.bashrc
-    alias la='ls -la'
-    alias ll='ls -l'
+    ```
+    defaults write com.apple.finder AppleShowAllFiles TRUE
+    killall Finder
+    ```
+- .bashrcを読み込むようにする（基本的に.bashrcに色々書く）
+    http://magonote.skr.jp/bashrc/
+    ```
+    vi ~/.bash_profile
+        if [ -f ~/.bashrc ]; then
+            . ~/.bashrc
+        fi
 
-source ~/.bashrc
-```
+    source ~/.bash_profile
+    ```
+
+- コマンドにエイリアスを張る
+    http://qiita.com/pugiemonn/items/da04a422cc7da548632e
+    ```
+    vi ~/.bashrc
+        alias la='ls -la'
+        alias ll='ls -l'
+
+    source ~/.bashrc
+    ```
 
 Homebrew
 ---
 - https://brew.sh/
-```
-/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-```
+    ```
+    /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+    ```
 homebrew-cask
 ---
 - https://github.com/caskroom/homebrew-cask/blob/master/USAGE.md
-```
-brew tap caskroom/cask
-brew tap caskroom/homebrew-versions
-```
+    ```
+    brew tap caskroom/cask
+    brew tap caskroom/homebrew-versions
+    ```
+
 デスクトップアプリケーション
 ---
-```
-# Google系
-brew cask install google-chrome
-brew cask install google-japanese-ime
 
-# Macの細かい設定いじるやつ
-brew cask install onyx
+    ```
+    # Google系
+    brew cask install google-chrome
+    brew cask install google-japanese-ime
 
-# チャットサービスまとめるやつ
-brew cask install franz
+    # Macの細かい設定いじるやつ
+    brew cask install onyx
 
-# IDE
-brew cask install phpstorm
-brew cask install pycharm-ce
-brew cask install intellij-idea-ce
-brew cask install visual-studio-code
+    # チャットサービスまとめるやつ
+    brew cask install franz
 
-# Git
-brew cask install sourcetree
+    # IDE
+    brew cask install phpstorm
+    brew cask install pycharm-ce
+    brew cask install intellij-idea-ce
+    brew cask install visual-studio-code
 
-# MySQLWorkbench  
-brew cask install mysqlworkbench
+    # Git
+    brew cask install sourcetree
 
-# Redis
-brew cask install medis
+    # MySQLWorkbench  
+    brew cask install mysqlworkbench
 
-# Redshift
-brew cask install postico
+    # Redis
+    brew cask install medis
 
-# Tableau
-brew cask install tableau
+    # Redshift
+    brew cask install postico
 
-```
+    # Tableau
+    brew cask install tableau
+
+    ```
+
 Git
 ---
-```
-brew install git
-git --version
-```
+
+
+    ```
+    brew install git
+    git --version
+    ```
+
 Python
 ---
 - Pyenv
-```
-brew install pyenv
-vi ~/.bashrc
-    eval "$(pyenv init -)"
+    ```
+    brew install pyenv
+    vi ~/.bashrc
+        eval "$(pyenv init -)"
 
-source ~/.bashrc
-```
+    source ~/.bashrc
+    ```
 - http://qiita.com/y__sama/items/5b62d31cb7e6ed50f02c
-```
-pyenv install -l | grep ana
-pyenv install anaconda3-4.3.0
-pyenv global anaconda3-4.3.0
+    ```
+    pyenv install -l | grep ana
+    pyenv install anaconda3-4.3.0
+    pyenv global anaconda3-4.3.0
 
-python --version
-```
+    python --version
+    ```
 Node.js
 ---
 - nodebrew
  - https://github.com/hokaccha/nodebrew#install
-```
-curl -L git.io/nodebrew | perl - setup
-vi .bashrc
-    export PATH=$HOME/.nodebrew/current/bin:$PATH
+    ```
+    curl -L git.io/nodebrew | perl - setup
+    vi .bashrc
+        export PATH=$HOME/.nodebrew/current/bin:$PATH
 
-source ~/.bashrc
-```
-```
-nodebrew install-binary v7.x
-nodebrew use v7.x
+    source ~/.bashrc
+    ```
+    ```
+    nodebrew install-binary v7.x
+    nodebrew use v7.x
 
-node -v
-```
+    node -v
+    ```
 
 Java
 ---
 - JDK
-```
-brew cask install java
-vi ~/.bashrc
-    export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
-    
-source ~/.bashrc
+    ```
+    brew cask install java
+    vi ~/.bashrc
+        export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
+        
+    source ~/.bashrc
 
-java -version
-```
+    java -version
+    ```
+
 Scala
 ---
-```
-brew install scala
+    ```
+    brew install scala
 
-scala --version
-```
+    scala --version
+    ```
 
 Docker
 ---
 - Docker for mac
 - http://stangler.hatenablog.com/entry/2016/11/17/141705
-```
-brew cask install docker
-```
-インストール後にLaunchpadから起動する
+    ```
+    brew cask install docker
+    ```
+    インストール後にLaunchpadから起動する
 
 Digdag
 ---
 - https://github.com/treasure-data/digdag
 - Node.js 7系、JDK 1.8系のインストール必須
-```
-brew install digdag
-```
+    ```
+    brew install digdag
+    ```
 
 Embulk
 ---
 - https://github.com/embulk/embulk
-```
-curl --create-dirs -o ~/.embulk/bin/embulk -L "http://dl.embulk.org/embulk-latest.jar"
-chmod +x ~/.embulk/bin/embulk
-echo 'export PATH="$HOME/.embulk/bin:$PATH"' >> ~/.bashrc
-source ~/.bashrc
+    ```
+    curl --create-dirs -o ~/.embulk/bin/embulk -L "http://dl.embulk.org/embulk-latest.jar"
+    chmod +x ~/.embulk/bin/embulk
+    echo 'export PATH="$HOME/.embulk/bin:$PATH"' >> ~/.bashrc
+    source ~/.bashrc
 
-embulk -v
-```
+    embulk -v
+    ```
+
 TreasureData
 ---
-```
-brew cask install td-toolbelt
-```
+    ```
+    brew cask install td-toolbelt
+    ```
