過去記事追加

--- a/source/_posts/2017-10-05-001.md
+++ b/source/_posts/2017-10-05-001.md
@@ -4,11 +4,78 @@ date: 2017-10-05 00:00:00
 tags: [Google,新製品,Google Pixel 2,Google Home,Google Pixelbook]
 ---
 
-<style>
-.article-entry .gist {
-    background: #ffffff;
-}
-</style>
-<div class="article-entry" itemprop="articleBody">
-<script src="https://gist.github.com/eiichi-worker/5ab912f8d18eb1080ecf4300ab4778bd.js"></script>   
-</div>
+僕の感じた今回のテーマ「AIとカメラ」
+===
+
+Google Pixel 2、Pixel 2 XL
+===
+5inch、6inch  
+Snapdragon 835、RAM 4GB。ストレージは64GBと128GB  
+Pixel 2の64GBが649ドル（約7万2000円）、128GBが749ドル（約8万4000円）。Pixel 2 XLの64GBモデルが849ドル（約9万5000円）、128GBモデルが949ドル（約10万6000円）  
+カメラ評価 98 （あいぽん8は92）  
+Google Lens搭載  
+レンズ1つで2つ分 dual-pixel sensor  
+ARCore対応（Tangoの後継、普及版）  
+アクティブエッジ  
+
+※ 残念ながら現状日本で発売される予定はない  
+- https://www.gizmodo.jp/2017/10/pixel-2-xl.html   
+- https://www.gizmodo.jp/2017/10/105584.html  
+
+<!-- more -->
+
+Pixel Buds
+===
+ワイヤレスヘッドセット
+Google翻訳を利用したリアルタイム通訳が利用できる
+- https://app.famitsu.com/20171005_1152155/
+
+Google Home、Google Home Mini (New!!)、Google Home Max（New!！）
+===
+Home
+---
+やっとこさ日本発売！！
+- https://store.google.com/product/google_home?hl=ja
+
+
+Home Mini
+---
+Miniは今日から予約受け付けを開始し、10月19日から出荷
+- https://store.google.com/product/google_home_mini?hl=ja
+
+
+Home Max
+---
+Home Maxの特徴は4.5インチの広帯域スピーカーをステレオ構成として、さらに2つのツイーター  
+スマートサウンドと称する空間認識によるAI自動オーディオチューニング機能を搭載し、室内の家具配置などに合わせてサウンドを調整 
+YouTube Musicは12か月間の広告なしリスニング権が付属   
+Home Maxは12月  
+- http://japanese.engadget.com/2017/10/04/google-home-max-youtube-music-1-12/
+
+
+Google Clips
+===
+AI搭載 スマートカメラ
+16GB
+3時間分のMotion Photos
+249ドル
+機械学習を利用し、ユーザー、家族、友人、ペットなど特定の対象を認識して重要な場面を記録
+置いとくだけで”いいところ”を撮影
+スタンドアローンですべての機能が実行
+レンズが何かの影になってしまった場合は人工知能が事態を認識してスマートフォンにそのことを通知
+
+- http://www.itmedia.co.jp/news/articles/1710/05/news060.html
+
+Google Pixelbook
+===
+Chrome OS + Androidアプリ  
+ペン対応タブレット  
+  ペンの遅延は10ms（Surface 21ms ApplePencil 20ms）  
+  傾き検出、2000段階感圧  
+12.3インチ、Core i5 / i7プロセッサ、最大16GB RAM、128 / 256 / 512GBストレージ   
+10.3mm厚、約1.1kg 
+キーボードをぐるっと反対側に畳んでタブレット   
+
+128GBモデル999ドル  
+Pixelbook Pen は別売り100ドル  
+- http://japanese.engadget.com/2017/10/04/google-pixelbook-chromebook/
