fix: *が強調になってたので調整

--- a/source/_posts/2018-01-04-001.md
+++ b/source/_posts/2018-01-04-001.md
@@ -9,9 +9,9 @@ Visual Studio Code便利ですね！
 Elasticsearch用のjsonファイルは「Elasticsearch for VSCode」で開いてほしいです。  
 毎回左下のボタンでjson → Elasticsearchに切り替えてもいいのだけど面倒。  
 同じように hive用のsqlとかそういうことは稀によくある。  
-そんなとき僕は拡張子を、「*.es.json」とかにしている。  
+そんなとき僕は拡張子を、「.es.json」とかにしている。  
 ただのJSONではなくて、es用のjsonだよ言う意味。  
-hiveは「*.hive.sql」だったりします。  
+hiveは「.hive.sql」だったりします。  
 これらを自動で指定の拡張機能（シンタックスハイライトとか）で開くように設定します。
 
 <!-- more -->
@@ -35,7 +35,7 @@ hiveは「*.hive.sql」だったりします。
 }
 
 ```
-ファイル名は米印「*」でワイルドカード
+ファイル名は米印「```*```」でワイルドカード
 
 
 おまけ
