--- a/source/_posts/2018-05-13-001.md
+++ b/source/_posts/2018-05-13-001.md
@@ -4,6 +4,9 @@ date: 2018-05-13 00:00:00
 tags: [gulp,gulp-gh-pages,Github Pages]
 ---
 
+> 別の方法で解決しました。  
+> [gulpの「gulp-gh-pages」のエラーを解決した「gulp-gh-pages-will」ってやつがあった | 技術は生もの](http://blog.noraneko.work/2018-05-17-001/)
+
 gulpの「gulp-gh-pages」がエラー吐くようになった。。  
 こんなやつ↓
 
